--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3160,3 +3160,17 @@ section,
     color: color-mix(in srgb, var(--default-color), transparent 60%);
     font-size: 14px;
 }
+.custom-font {
+    font-family: 'Raleway', sans-serif;
+}
+.blog-posts .post-date {
+    background-color: var(--accent-color);
+    color: var(--contrast-color);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    text-transform: uppercase;
+    font-size: 13px;
+    padding: 6px 12px;
+    font-weight: 500;
+}
